lib/src/compiler/tests/testdata/errors/40.out
error: invalid regular expression
 --> line:3:11
  |
3 |     $a = /(abc/
  |           ^ unclosed group
  |